[package]
name = "tourvia"
version = "2.0.0"
edition = "2021"
description = "Tournament Visualization and Administration System"
authors = ["Tourvia Team"]

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
] }
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
env_logger = "0.11"
log = "0.4"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
serde = { version = "1.0.228", features = ["derive"] }
imageproc = "0.26.2"
ab_glyph = "0.2.32"
